--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "antd": "^5.17.3",
+    "axios": "^1.7.2",
     "hamburger-react": "^2.5.0",
     "jwt-decode": "^4.0.0",
     "preline": "^2.1.0",
